--- a/app/src/main/res/layout/card_cost_of_service.xml
+++ b/app/src/main/res/layout/card_cost_of_service.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="42sp"
-            android:text=" $"
+            android:text="@string/curency"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
